--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-requests
-beautifulsoup4
-selenium
-lxml
-dateparser
+requests>=2.28.0
+beautifulsoup4>=4.11.0
+selenium>=4.8.0
+lxml>=4.9.0
+dateparser>=1.1.0
 argparse
